// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuoteBlock.vue renders correctly (preview mode) 1`] = `
<div
  class="wrapper quote"
>
  <div
    class="target quote preview"
    contenteditable="false"
  >
    foo
  </div>
</div>
`;

exports[`QuoteBlock.vue renders correctly 1`] = `
<div
  class="wrapper quote"
>
  <blockquote
    class="target quote"
    contenteditable="true"
  >
    foo
  </blockquote>
   
  <!---->
</div>
`;
